@@ -1,12 +1,20 @@
 package org.tkit.document.management.rs.v1.controllers;
 
 import java.util.Objects;
+import java.util.stream.Collectors;
 
 import javax.enterprise.context.ApplicationScoped;
 import javax.inject.Inject;
 import javax.transaction.Transactional;
 import javax.validation.Valid;
-import javax.ws.rs.*;
+import javax.ws.rs.Consumes;
+import javax.ws.rs.DELETE;
+import javax.ws.rs.GET;
+import javax.ws.rs.POST;
+import javax.ws.rs.PUT;
+import javax.ws.rs.Path;
+import javax.ws.rs.PathParam;
+import javax.ws.rs.Produces;
 import javax.ws.rs.core.MediaType;
 import javax.ws.rs.core.Response;
 
@@ -24,6 +32,8 @@ import org.tkit.document.management.rs.v1.models.DocumentSpecificationDTO;
 import org.tkit.document.management.rs.v1.models.RFCProblemDTO;
 import org.tkit.quarkus.rs.exceptions.RestException;
 
+import io.quarkus.logging.Log;
+
 @Path("/v1/document-specification")
 @Produces(MediaType.APPLICATION_JSON)
 @Consumes(MediaType.APPLICATION_JSON)
@@ -40,6 +50,8 @@ public class DocumentSpecificationController {
     @Inject
     DocumentDAO documentDAO;
 
+    private static final String CLASS_NAME = "DocumentSpecificationController";
+
     @POST
     @Transactional
     @Operation(operationId = "createDocumentSpecification", description = "Creates specification of document")
@@ -48,8 +60,10 @@ public class DocumentSpecificationController {
     @APIResponse(responseCode = "500", description = "Internal Server Error, please check Problem Details", content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RFCProblemDTO.class)))
 
     public Response createDocumentSpecification(@Valid DocumentSpecificationCreateUpdateDTO dto) {
-        DocumentSpecification documentSpecification = documentSpecificationDAO.create(documentSpecificationMapper.map(dto));
-
+        Log.info(CLASS_NAME, "Entered createDocumentSpecification method", null);
+        DocumentSpecification documentSpecification = documentSpecificationDAO
+                .create(documentSpecificationMapper.map(dto));
+        Log.info(CLASS_NAME, "Exited createDocumentSpecification method", null);
         return Response.status(Response.Status.CREATED)
                 .entity(documentSpecificationMapper.mapToDTO(documentSpecification))
                 .build();
@@ -63,10 +77,13 @@ public class DocumentSpecificationController {
     @APIResponse(responseCode = "500", description = "Internal Server Error, please check Problem Details", content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RFCProblemDTO.class)))
 
     public Response getDocumentSpecificationById(@PathParam("id") String id) {
+        Log.info(CLASS_NAME, "Entered getDocumentSpecificationById method", null);
         DocumentSpecification documentSpecification = documentSpecificationDAO.findById(id);
         if (Objects.isNull(documentSpecification)) {
-            throw new RestException(Response.Status.NOT_FOUND, Response.Status.NOT_FOUND, getSpecificationNotFoundMsg(id));
+            throw new RestException(Response.Status.NOT_FOUND, Response.Status.NOT_FOUND,
+                    getSpecificationNotFoundMsg(id));
         }
+        Log.info(CLASS_NAME, "Exited getDocumentSpecificationById method", null);
         return Response.status(Response.Status.OK)
                 .entity(documentSpecificationMapper.mapToDTO(documentSpecification))
                 .build();
@@ -79,9 +96,12 @@ public class DocumentSpecificationController {
     @APIResponse(responseCode = "500", description = "Internal Server Error, please check Problem Details", content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RFCProblemDTO.class)))
 
     public Response getAllDocumentSpecifications() {
+        Log.info(CLASS_NAME, "Entered getAllDocumentSpecifications method", null);
+        Log.info(CLASS_NAME, "Exited getAllDocumentSpecifications method", null);
         return Response.status(Response.Status.OK)
-                .entity(documentSpecificationMapper.findAllDocumentSpecifications(documentSpecificationDAO.findAll()
-                        .toList()))
+                .entity(documentSpecificationMapper
+                        .findAllDocumentSpecifications(documentSpecificationDAO.findAll()
+                                .collect(Collectors.toList())))
                 .build();
 
     }
@@ -96,16 +116,21 @@ public class DocumentSpecificationController {
     @APIResponse(responseCode = "500", description = "Internal Server Error, please check Problem Details", content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RFCProblemDTO.class)))
 
     public Response deleteDocumentSpecificationById(@PathParam("id") String id) {
+        Log.info(CLASS_NAME, "Entered deleteDocumentSpecificationById method", null);
         DocumentSpecification documentSpecification = documentSpecificationDAO.findById(id);
         if (Objects.nonNull(documentSpecification)) {
             if (!documentDAO.findDocumentsWithDocumentSpecificationId(id).isEmpty()) {
                 throw new RestException(Response.Status.BAD_REQUEST, Response.Status.BAD_REQUEST,
-                        "You cannot delete specification of document with id " + id + ". It is assigned to the document.");
+                        "You cannot delete specification of document with id " + id
+                                + ". It is assigned to the document.");
             }
             documentSpecificationDAO.delete(documentSpecification);
+            Log.info(CLASS_NAME, "Exited deleteDocumentSpecificationById method",
+                    null);
             return Response.status(Response.Status.NO_CONTENT).build();
         }
-        throw new RestException(Response.Status.NOT_FOUND, Response.Status.NOT_FOUND, getSpecificationNotFoundMsg(id));
+        throw new RestException(Response.Status.NOT_FOUND, Response.Status.NOT_FOUND,
+                getSpecificationNotFoundMsg(id));
     }
 
     @PUT
@@ -118,17 +143,23 @@ public class DocumentSpecificationController {
 
     public Response updateDocumentSpecificationById(@PathParam("id") String id,
             @Valid DocumentSpecificationCreateUpdateDTO dto) {
+        Log.info(CLASS_NAME, "Entered updateDocumentSpecificationById method", null);
         DocumentSpecification documentSpecification = documentSpecificationDAO.findById(id);
         if (Objects.isNull(documentSpecification)) {
-            throw new RestException(Response.Status.NOT_FOUND, Response.Status.NOT_FOUND, getSpecificationNotFoundMsg(id));
+            throw new RestException(Response.Status.NOT_FOUND, Response.Status.NOT_FOUND,
+                    getSpecificationNotFoundMsg(id));
         }
         documentSpecificationMapper.update(dto, documentSpecification);
+        Log.info(CLASS_NAME, "Exited updateDocumentSpecificationById method", null);
         return Response.status(Response.Status.OK)
-                .entity(documentSpecificationMapper.mapToDTO(documentSpecificationDAO.update(documentSpecification)))
+                .entity(documentSpecificationMapper
+                        .mapToDTO(documentSpecificationDAO.update(documentSpecification)))
                 .build();
     }
 
     private String getSpecificationNotFoundMsg(String id) {
+        Log.info(CLASS_NAME, "Entered getSpecificationNotFoundMsg method", null);
+        Log.info(CLASS_NAME, "Exited getSpecificationNotFoundMsg method", null);
         return "The document specification with id " + id + " was not found.";
     }
 
