@@ -1,12 +1,20 @@
 package org.tkit.document.management.rs.v1.controllers;
 
 import java.util.Objects;
+import java.util.stream.Collectors;
 
 import javax.enterprise.context.ApplicationScoped;
 import javax.inject.Inject;
 import javax.transaction.Transactional;
 import javax.validation.Valid;
-import javax.ws.rs.*;
+import javax.ws.rs.Consumes;
+import javax.ws.rs.DELETE;
+import javax.ws.rs.GET;
+import javax.ws.rs.POST;
+import javax.ws.rs.PUT;
+import javax.ws.rs.Path;
+import javax.ws.rs.PathParam;
+import javax.ws.rs.Produces;
 import javax.ws.rs.core.MediaType;
 import javax.ws.rs.core.Response;
 
@@ -24,6 +32,8 @@ import org.tkit.document.management.rs.v1.models.DocumentTypeDTO;
 import org.tkit.document.management.rs.v1.models.RFCProblemDTO;
 import org.tkit.quarkus.rs.exceptions.RestException;
 
+import io.quarkus.logging.Log;
+
 @Path("/v1/document-type")
 @Produces(MediaType.APPLICATION_JSON)
 @Consumes(MediaType.APPLICATION_JSON)
@@ -40,6 +50,8 @@ public class DocumentTypeController {
     @Inject
     DocumentDAO documentDAO;
 
+    private static final String CLASS_NAME = "DocumentTypeController";
+
     @POST
     @Transactional
     @Operation(operationId = "createDocumentType", description = "Creates type of document")
@@ -48,7 +60,9 @@ public class DocumentTypeController {
     @APIResponse(responseCode = "500", description = "Internal Server Error, please check Problem Details", content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RFCProblemDTO.class)))
 
     public Response createDocumentType(@Valid DocumentTypeCreateUpdateDTO dto) {
+        Log.info(CLASS_NAME, "Entered createDocumentType method", null);
         DocumentType documentType = documentTypeDAO.create(documentTypeMapper.map(dto));
+        Log.info(CLASS_NAME, "Exited createDocumentType method", null);
         return Response.status(Response.Status.CREATED)
                 .entity(documentTypeMapper.mapDocumentType(documentType))
                 .build();
@@ -62,10 +76,13 @@ public class DocumentTypeController {
     @APIResponse(responseCode = "500", description = "Internal Server Error, please check Problem Details", content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RFCProblemDTO.class)))
 
     public Response getDocumentTypeById(@PathParam("id") String id) {
+        Log.info(CLASS_NAME, "Entered getDocumentTypeById method", null);
         DocumentType documentType = documentTypeDAO.findById(id);
         if (Objects.isNull(documentType)) {
-            throw new RestException(Response.Status.NOT_FOUND, Response.Status.NOT_FOUND, getTypeNotFoundMsg(id));
+            throw new RestException(Response.Status.NOT_FOUND, Response.Status.NOT_FOUND,
+                    getTypeNotFoundMsg(id));
         }
+        Log.info(CLASS_NAME, "Exited getDocumentTypeById method", null);
         return Response.status(Response.Status.OK)
                 .entity(documentTypeMapper.mapDocumentType(documentType))
                 .build();
@@ -78,8 +95,11 @@ public class DocumentTypeController {
     @APIResponse(responseCode = "500", description = "Internal Server Error, please check Problem Details", content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RFCProblemDTO.class)))
 
     public Response getAllTypesOfDocument() {
+        Log.info(CLASS_NAME, "Entered getAllTypesOfDocument method", null);
+        Log.info(CLASS_NAME, "Exited getAllTypesOfDocument method", null);
         return Response.status(Response.Status.OK)
-                .entity(documentTypeMapper.findAllDocumentType(documentTypeDAO.findAll().toList()))
+                .entity(documentTypeMapper.findAllDocumentType(
+                        documentTypeDAO.findAll().collect(Collectors.toList())))
                 .build();
     }
 
@@ -93,13 +113,16 @@ public class DocumentTypeController {
     @APIResponse(responseCode = "500", description = "Internal Server Error, please check Problem Details", content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RFCProblemDTO.class)))
 
     public Response deleteDocumentTypeById(@PathParam("id") String id) {
+        Log.info(CLASS_NAME, "Entered deleteDocumentTypeById method", null);
         DocumentType documentType = documentTypeDAO.findById(id);
         if (Objects.nonNull(documentType)) {
             if (!documentDAO.findDocumentsWithDocumentTypeId(id).isEmpty()) {
                 throw new RestException(Response.Status.BAD_REQUEST, Response.Status.BAD_REQUEST,
-                        "You cannot delete type of document with id " + id + ". It is assigned to the document.");
+                        "You cannot delete type of document with id " + id
+                                + ". It is assigned to the document.");
             }
             documentTypeDAO.delete(documentType);
+            Log.info(CLASS_NAME, "Exited deleteDocumentTypeById method", null);
             return Response.status(Response.Status.NO_CONTENT).build();
         }
         throw new RestException(Response.Status.NOT_FOUND, Response.Status.NOT_FOUND, getTypeNotFoundMsg(id));
@@ -114,17 +137,22 @@ public class DocumentTypeController {
     @APIResponse(responseCode = "500", description = "Internal Server Error, please check Problem Details", content = @Content(mediaType = MediaType.APPLICATION_JSON, schema = @Schema(implementation = RFCProblemDTO.class)))
 
     public Response updateDocumentTypeById(@PathParam("id") String id, @Valid DocumentTypeCreateUpdateDTO dto) {
+        Log.info(CLASS_NAME, "Entered updateDocumentTypeById method", null);
         DocumentType documentType = documentTypeDAO.findById(id);
         if (Objects.isNull(documentType)) {
-            throw new RestException(Response.Status.NOT_FOUND, Response.Status.NOT_FOUND, getTypeNotFoundMsg(id));
+            throw new RestException(Response.Status.NOT_FOUND, Response.Status.NOT_FOUND,
+                    getTypeNotFoundMsg(id));
         }
         documentTypeMapper.update(dto, documentType);
+        Log.info(CLASS_NAME, "Exited updateDocumentTypeById method", null);
         return Response.status(Response.Status.CREATED)
                 .entity(documentTypeMapper.mapDocumentType(documentTypeDAO.update(documentType)))
                 .build();
     }
 
     private String getTypeNotFoundMsg(String id) {
+        Log.info(CLASS_NAME, "Entered getTypeNotFoundMsg method", null);
+        Log.info(CLASS_NAME, "Exited getTypeNotFoundMsg method", null);
         return "The document type with id " + id + " was not found.";
     }
 }
